class Address:
    def __init__(self, name: str, address1: str, address2: str, city: str, state: str, zip: str) -> None:
        self.name = name
        self.address1 = address1
        self.address2 = address2
        self.city = city
        self.state = state
        self.zip = zip
